fixing the amount of top white space

--- a/bluemoon.css
+++ b/bluemoon.css
@@ -14,7 +14,7 @@ body {
 }
 
 .header {
-height: 930px;
+height: 100vh;
 }
 
 .header a{
